# cpp17-gameengine-starter

./: .gitignore  ARCHIVE.md  CMakeLists.txt  CONTRIBUTING.md  README.md
all/: CMakeLists.txt
docs/: README-diagrams.pptx
docs/README/: diagrams.pptx
modules/all/: CMakeLists.txt
modules/console/: CMakeLists.txt
modules/console/src/: main.cpp
modules/desktop/: CMakeLists.txt
modules/desktop/src/: desktop.cpp  main.cpp
modules/module_core/: CMakeLists.txt
modules/module_core/src/: core.cpp
modules/module_desktop/: CMakeLists.txt
modules/module_desktop/src/: desktop.cpp
modules/module_server/: CMakeLists.txt
modules/module_server/src/: server.cpp
modules/server/: CMakeLists.txt
modules/server/src/: server.cpp
modules/standalone_desktop_win32_x64/: CMakeLists.txt
modules/standalone_desktop_win32_x64/src/: main.cpp
modules/standalone_server_win32_x64/: CMakeLists.txt
modules/standalone_server_win32_x64/src/: main.cpp
platform/core/: CMakeLists.txt
platform/desktop/: CMakeLists.txt
platform/desktop/include/: desktop.h
platform/desktop/src/: desktop.cpp
platform/server/: CMakeLists.txt
platform/server/src/: server.cpp
projects/02_getting_an_image_on_the_screen/: CMakeLists.txt
projects/02_getting_an_image_on_the_screen/src/: 02_getting_an_image_on_the_screen.cpp
projects/all/: CMakeLists.txt
projects/hello/: CMakeLists.txt
standalone/desktop_win32_x64/: CMakeLists.txt
standalone/server_win32_x64/: CMakeLists.txt
standalones/desktop_win32_x64/: CMakeLists.txt
standalones/desktop_win32_x64/src/: main.cpp
standalones/server_win32_x64/: CMakeLists.txt
standalones/server_win32_x64/src/: main.cpp
